portfolio/src/index.css
:root {
  /* Colors */
  --color-white: rgb(221, 221, 221);
  --color-black: rgb(27, 33, 43);
  --color-light-black: rgb(56, 56, 56);
  --color-accent1: rgb(255, 158, 116);

  /* Fonts */
  --cursive-font: 'Lobster', cursive;
  --sidebar-font: 'Open Sans', sans-serif;

  /* Font sizes */
  --home-font-size: 1.3em;
  --footer-small-size: .8em;

  /* Font weight */
  --weight-hard: 600;

  /* Icon sizes */
  --service-icons: 2em; 

}  

body {
  background-color: var(--color-light-black);
  display: flex;
  flex-direction: column;
}

p {
  color: var(--color-white);
  font-family: var(--sidebar-font);
  font-weight: var(--weight-hard);
}

.orange {
  color: var(--color-accent1);
}

/* Service Section */
.serviceTitle {
  color: var(--color-accent1);
  font-family: var(--cursive-font);
}

/* end */

/* footer */
footer {
  font-size: var(--footer-small-size);
  text-align: center;
  font-weight: var(--weight-hard);
  margin-top: auto;
}

footer > span {
  color: var(--color-accent1);
}
/* end */

/* DESKTOP */

@media (min-width: 768px) {
  html {
    overflow: hidden;
  }
  /* SIDEBAR */
  .wrapper {
    display: flex;
    min-height: 100vh;
    width: 250px;
    float: left;
  }

  #sidebar {
    display: flex;
    min-height: 100vh;
    flex-flow: column;
    width: 250px;
    position: fixed;
    top: 0;
    left: 0;
    min-height: 100vh;
    z-index: 999;
    background: var(--color-black);
    color: var(--color-white);
    }

  #sidebarIMG > img {
    height: 30vh;
    display: block;
    margin-left: auto;
    margin-right: auto;
    margin-top: 1em;
    margin-bottom: 2em;
    border-radius: 10px;
    border: 3px solid var(--color-white);
  }

  #myName {
    font-family: var(--cursive-font);
    font-size: 2em;
    width: 100%;
    text-align: center;
  }

  #firstName {
    display: inline-block;
    color: var(--color-white);
  }

  #lastName {
    display: inline-block;
    color: var(--color-accent1);
  }

  #sidebar > hr {
    height: 5px;
    color: var(--color-white);    
    background-color: var(--color-white);
    width: 80%;
  }

  #sidebarItems {
    flex: 1 1 auto;
    display: flex;
    width: 100%;
  }

  #sidebarItems > ul {
    width: 100%;
    display:flex;
    flex-direction:column;
    justify-content: space-between;
  }
  
  #sidebarItems > ul > li {
    padding-left: 10%;
    font-family: var(--sidebar-font);
    font-size: 1.3em;
    font-weight: 800;
  }

  #sidebarItems > ul > li > a {
    color: var(--color-accent1); 
  }

  #active {
    color: var(--color-white) !important;
  }
 
    /* END */

    .contentDiv {
      min-height: 100vh;
      max-height: 100vh;
      display: flex;
      flex-direction: column;
    }

    /* Home Section */
    #home > section {
      font-size: var(--home-font-size);
    }


    /* end */

    /* Services */
    
    .serviceicons {
      color: var(--color-accent1);
      font-size: var(--service-icons);
    }

    .servicesboxes {
      margin-left: 50px;
      margin-top: 50px;
    }

    /* end */

    /* Skills */

    /* end */

    /* Portfolio */
    #portfolio {
      max-height: 95vh;
      display: grid;
      grid-template-columns: 1fr 1fr 1fr;
      column-gap: 10px;
      row-gap: 15px;
      margin-top: 50px;
    }

    .cardGroup {
      width: 80%;
      justify-self: center;
    }

    .card-img-top {
      width: 100%;
      height: 100px;
    }

    .cardButtons {
      display: flex;
      justify-content: center;
    }

    .cardButtons > button {
      margin: 0 1.5em 0 1.5em;
    }
    
    /* end */

    /* About me */

    /* end */

    /* Contact */

    /* end */

    /* Footer */
    footer {
      margin-top: auto;
      width: 100%;
      font-size: var(--footer-small-size) !important;
  }

    /* end */

}

